--- a/main.css
+++ b/main.css
@@ -3,14 +3,14 @@ body {
   color: #213053;
   margin: 0;
 }
-   
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
 }
-   
+
   .header__logo {
     height: 30px;
   }
@@ -23,6 +23,7 @@ header {
   header a {
     font-size: 15px;
     font-weight: 600;
+    margin-right: 25px;
   }
 
   button {
@@ -30,17 +31,11 @@ header {
     font-size: 15px;
     color: #fff;
     background-color: #23a030;
-    border: none;
+  /*  border: none;*/
     border-radius: 15px;
     cursor: pointer;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
-  }
-
-  header a {
-    font-size: 15px;
-    font-weight: 600;
-    margin-right: 25px;
   }
 
   .about__image {
@@ -57,7 +52,7 @@ header {
     align-items: center;
     justify-content: space-around;
     padding-bottom: 115px;
-    padding-top: 115px;
+    padding-top: 115px;    
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
@@ -84,3 +79,119 @@ header {
   .about__info {
     max-width: 550px;
   }
+
+  .form__container {
+    width: 550px;
+  }
+
+  .form {
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px; 
+    padding-bottom: 115px;
+    text-align: center; 
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+
+.form h1 {
+  font-size: 48px;
+} 
+
+.form p {
+  font-size: 18px;
+  opacity: 0.65;
+}
+
+.form__group {
+  display: flex; 
+  flex-direction: column;
+  text-align: left;
+} 
+
+.form form {
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 60px;
+}
+
+.form label {
+  font-size: 18px;
+  font-weight: 600;
+  padding-top: 15px; 
+}
+
+.form input {
+  font-size: 18px;
+  color: #213053; 
+  height: 60px;
+  padding-top: 0;
+  padding-right: 20px;
+  padding-bottom: 0;
+  padding-left: 20px;
+  border-radius: 15px;
+}
+
+.form select {
+  font-size: 18px;
+  color: #213053; 
+  height: 60px;
+  padding-top: 0;
+  padding-right: 20px;
+  padding-bottom: 0;
+  padding-left: 20px;
+  border-radius: 15px;
+}
+
+.form__submit {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 40px; 
+}
+
+select {
+  appearance: none;
+}
+
+input {
+  outline: none;
+}
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+  transition: ease-in 0.3s ;
+}
+
+.footer {
+  font-size: 16px;
+  font-weight: 600;
+  padding: 90px 20px;
+}
+
+.footer__container {
+  display: flex;
+}
+
+.footer__copyright {
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.footer__group {
+  margin-left: 80px;
+}
+
+.h3 {
+  font-size: 16px;
+  opacity: 0.7;
+  padding-bottom: 30px;
+}
+
+.footer__links a {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 15px;
+}
