--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  position: sticky;
+  background-color: white;
+  top: 0;
+  z-index: 1;
 }
 
   .header__logo {
@@ -45,6 +49,8 @@ header {
   .about__sun-image {
     width: 100px;
     height: 100px;
+    animation: rotation 10s infinite linear;
+    position: absolute;
   }
 
   .about {
@@ -119,28 +125,16 @@ header {
 .form label {
   font-size: 18px;
   font-weight: 600;
-  padding-top: 15px; 
+  margin-bottom: 20px; 
 }
 
-.form input {
+.form input, .form select {
   font-size: 18px;
   color: #213053; 
   height: 60px;
-  padding-top: 0;
-  padding-right: 20px;
-  padding-bottom: 0;
-  padding-left: 20px;
-  border-radius: 15px;
-}
-
-.form select {
-  font-size: 18px;
-  color: #213053; 
-  height: 60px;
-  padding-top: 0;
-  padding-right: 20px;
-  padding-bottom: 0;
-  padding-left: 20px;
+  padding: 0 20px;
+  border: none;
+  outline: none;
   border-radius: 15px;
 }
 
@@ -161,7 +155,7 @@ input {
 button:hover {
   background-color: #f6980c;
   box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
-  transition: ease-in 0.3s ;
+  transition: background-color 0.3s ease-in;
 }
 
 .footer {
@@ -172,6 +166,7 @@ button:hover {
 
 .footer__container {
   display: flex;
+  justify-content: center;
 }
 
 .footer__copyright {
@@ -184,14 +179,29 @@ button:hover {
   margin-left: 80px;
 }
 
-.h3 {
+.footer h3 {
   font-size: 16px;
   opacity: 0.7;
   padding-bottom: 30px;
 }
 
-.footer__links a {
+.footer__links {
   display: flex;
   flex-direction: column;
-  padding-bottom: 15px;
 }
+.footer__links a {
+  margin-bottom: 15px;
+}
+
+@keyframes rotation {
+  0% {
+      transform: rotate(0);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+
+
