--- a/main.css
+++ b/main.css
@@ -9,10 +9,19 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  position: sticky;
-  background-color: white;
   top: 0;
   z-index: 1;
+  position: fixed;
+  background: none;
+  left: 0;
+  right: 0;
+  transition: box-shadow, background-color .25s ease;
+
+}
+
+.header__scrolled {
+  background-color: white;
+  box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
 }
 
   .header__logo {
@@ -69,7 +78,7 @@ header {
     align-items: center;
     justify-content: space-around;
     padding-bottom: 115px;
-    padding-top: 115px;    
+    padding-top: 200px;    
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
